Install verified JCEF generations transactionally
Replace mutable in-place downloads with checksum-authenticated, manifest-validated immutable generations. Enforce HTTPS mirror identity, bounded parsing/extraction/cleanup, atomic state transitions, crash recovery, process and JVM locking, generation leases, SHA-1/SHA-256 commit identities, secure permissions, offline reuse, and legacy migration with comprehensive failure and lifecycle tests.